compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__aliased_discard_pattern_in_bit_array_later_used.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "\npub fn main(x) {\n  case x {\n    <<_ as b>> -> b + 2\n    _ -> 0\n  }\n}"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    <<_ as b>> -> b + 2
    _ -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main(bitstring()) -> integer().
main(X) ->
    case X of
        <<B>> ->
            B + 2;

        _ ->
            0
    end.
