compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__alternative_patterns1.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "\npub fn main(x) {\n  case x {\n    Ok(duplicate_name) | Error(duplicate_name) -> duplicate_name\n  }\n}"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    Ok(duplicate_name) | Error(duplicate_name) -> duplicate_name
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).

-spec main({ok, N} | {error, N}) -> N.
main(X) ->
    case X of
        {ok, Duplicate_name} ->
            Duplicate_name;

        {error, Duplicate_name} ->
            Duplicate_name
    end.
