compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__patterns__pattern_as.snap
---
source: compiler-core/src/erlang/tests/patterns.rs
expression: "pub fn a(x) {\n  case x {\n    Ok(1 as y) -> 1\n    _ -> 0\n  }\n}"
---
----- SOURCE CODE
pub fn a(x) {
  case x {
    Ok(1 as y) -> 1
    _ -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([a/1]).

-spec a({ok, integer()} | {error, any()}) -> integer().
a(X) ->
    case X of
        {ok, 1 = Y} ->
            1;

        _ ->
            0
    end.
